--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -22,13 +22,14 @@ body {
   flex-direction: column;
   height: 100vh;
 }
-
+/* 
 header {
+  flex-basis: 5em;
   display: flex;
-  justify-content: flex-end;
   background-color: #673ab8;
-}
+} */
 
+/* 
 header nav {
   display: flex;
 }
@@ -37,7 +38,7 @@ header a {
   color: #fff;
   padding: 0.75rem;
   text-decoration: none;
-}
+} */
 
 header a.active {
   background-color: #0005;
@@ -69,21 +70,52 @@ main {
   }
 }
 
-.progress-div {
+/* 
+
+
+
+
+
+
+
+
+
+
+
+
+
+*/
+
+header {
+  flex-basis: 2.5em;
+
   display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: xx-large;
+  background-color: #673ab8;
+}
+
+.content {
+  flex-grow: 1;
+  display: flex;
+}
+
+.progress-div {
   flex: 1;
+  display: flex;
 }
 
 .content-div {
-  display: flex;
   flex: 2;
+
+  margin: 2rem 0;
+
+  display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
 
   height: 100%;
   overflow-y: scroll;
-}
-
-#app > div:first-child{
-  display: flex;
-  height: 100%;
 }
