--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -135,3 +135,8 @@ header {
 .color-light > * {
   color: var(--dark-text-color);
 }
+
+figure > h2{
+  display: flex;
+  justify-content: center;
+}
