--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -122,7 +122,7 @@ header {
 
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
 
   /* height: 100%; */
   /* overflow-y: scroll; */
