--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -119,6 +119,7 @@ header {
   flex: 4;
 
   margin: 2rem 0;
+  margin-right: 10vw;
 
   display: flex;
   flex-direction: column;
@@ -129,7 +130,7 @@ header {
 }
 
 .fp-overflow {
-  height: 100%;
+  height: 100%; 
 }
 
 .color-light > * {
